--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <title>Vite + React</title>
   </head>
-  <body class="bg-[#3479F8] overflow-x-hidden">
+  <body class="bg-[#24BAFF] overflow-x-hidden">
     <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
